--- a/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/contact.html
+++ b/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/contact.html
@@ -9,62 +9,64 @@
 		<link rel="stylesheet" href="css/app.css" />
 	</head>
 	<body>
+		<header class="grid-x grid-padding-x grid-padding-y align-middle">
+			<div class="large-4 medium-4 small-4 cell">
+				<div>
+					<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
+				</div>
+			</div>
+			<div class="large-8 medium-8 small-8 cell">
+				<div>
+					<ul class="dropdown menu align-right" data-dropdown-menu>
+						<li><a href="species.html">Species</a></li>
+						<li>
+							<a href="reports.html">Reports</a>
+							<ul class="menu align-right">
+								<li><a href="possible-approaches.html">Creating a Living Laboratory</a></li>
+								<li><a href="intertidal-zones.html">Intertidal Zones</a></li>
+							</ul>
+						</li>
+						<li><a href="contact.html">Contact</a></li>
+					</ul>
+				</div>
+			</div>
+		</header>
+		<!--  -->
 		<div class="grid-container">
 			<!--  -->
-			<header class="grid-x grid-padding-x grid-padding-y align-middle">
-				<div class="large-4 medium-4 small-4 cell">
-					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
-					</div>
-				</div>
-				<div class="large-8 medium-8 small-8 cell">
-					<div>
-						<ul class="dropdown menu align-right" data-dropdown-menu>
-							<li><a href="species.html">Species</a></li>
-							<li>
-								<a href="reports.html">Reports</a>
-								<ul class="menu align-right">
-									<li><a href="possible-approaches.html">Creating a Living Laboratory</a></li>
-									<li><a href="intertidal-zones.html">Intertidal Zones</a></li>
-								</ul>
-							</li>
-							<li><a href="contact.html">Contact</a></li>
-						</ul>
-					</div>
-				</div>
-			</header>
-			<!--  -->
 			<div class="grid-x grid-padding-x">
-				<div class="large-12 medium-12 small-12 cell">
+				<div class="large-8 medium-8 small-12 cell">
 					<h1>Contact</h1>
 					<p>Hey there! Interested in teaming up to make a positive difference on our planet? We're all about collaboration and making things happen together. Whether you have an idea for a community project, want to join forces for an event, or just feel like brainstorming some cool initiatives, we'd love to hear from you. Let's chat and see how we can work together to create something awesome!</p>
 					<p><a href="mailto:eorae@yahoo.com?subject=livinglaboratory.org">eorae@yahoo.com</a></p>
 					<p><a href="tel:+15086659192">1-508-665-9192</a></p>
-					<p><img src="media/seeley.jpg" /></p>
+				</div>
+				<div class="large-4 medium-4 small-12 cell">
+					<p><img src="media/seeley.jpg" class="rounded" /></p>
 				</div>
 			</div>
 			<!--  -->
-			<footer class="grid-x grid-padding-x grid-padding-y align-middle" id="contact">
-				<div class="large-4 medium-4 small-4 cell">
-					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
-					</div>
-				</div>
-				<div class="large-8 medium-8 small-8 cell">
-					<div>
-						<ul class="menu align-right">
-							<ul class="dropdown menu align-right" data-dropdown-menu>
-								<li><a href="species.html">Species</a></li>
-								<li><a href="reports.html">Reports</a></li>
-								<li><a href="contact.html">Contact</a></li>
-								<li><a href="legal.html">Legal Stuff</a></li>
-							</ul>
-						</ul>
-					</div>
-				</div>
-			</footer>
-			<!--  -->
 		</div>
+		<!--  -->
+		<footer class="grid-x grid-padding-x grid-padding-y align-middle" id="contact">
+			<div class="large-4 medium-4 small-4 cell">
+				<div>
+					<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
+				</div>
+			</div>
+			<div class="large-8 medium-8 small-8 cell">
+				<div>
+					<ul class="menu align-right">
+						<ul class="dropdown menu align-right" data-dropdown-menu>
+							<li><a href="species.html">Species</a></li>
+							<li><a href="reports.html">Reports</a></li>
+							<li><a href="contact.html">Contact</a></li>
+							<li><a href="legal.html">Legal Stuff</a></li>
+						</ul>
+					</ul>
+				</div>
+			</div>
+		</footer>
 
 		<script src="js/vendor/jquery.js"></script>
 		<script src="js/vendor/what-input.js"></script>
