--- a/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/species.html
+++ b/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/species.html
@@ -44,7 +44,7 @@
 				<div class="large-12 medium-12 small-12 cell">
 					<div>
 						<p>One of our top priorities is to identify and detail current species on and around the designated observation sites. We aim to accomplish this goal using iNaturalist, a social network of naturalists, citizen scientists, and biologists built on the concept of mapping and sharing observations of biodiversity across the globe.</p>
-						<p><a class="button large" href="https://www.inaturalist.org/projects/deadmans-head-forest">Join the Project</a> <a class="button large" href="https://www.inaturalist.org/projects/deadmans-head-forest?tab=species">All Species</a></p>
+						<p><a class="button large" href="https://www.inaturalist.org/projects/deadmans-head-forest">Join the Project</a> <a class="button large" href="https://www.inaturalist.org/observations?project_id=deadmans-head-forest&verifiable=any&place_id=any">Explore Species</a></p>
 					</div>
 				</div>
 			</div>
