--- a/index.html
+++ b/index.html
@@ -4,44 +4,18 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Foundation for Sites</title>
+		<title>LivingLaboratory.org</title>
 		<link rel="stylesheet" href="css/foundation.css" />
 		<link rel="stylesheet" href="css/app.css" />
 	</head>
 	<style>
-		/* body::before {
-			content: "";
-			background-image: url("media/trees.jpg");
-			background-size: cover;
-			position: fixed;
-			top: 0px;
-			right: 0px;
-			bottom: 0px;
-			left: 0px;
-			opacity: 0.25;
-			z-index: -1;
-		} */
 		.gimmie-some-space {
 			padding-top: 3rem;
 			padding-bottom: 3rem;
 		}
 		#hero {
-			/* content: ""; */
 			background-image: url("media/trees.jpg");
-			/* background-size: cover; */
-			/* position: fixed; */
-			/* top: 0px;
-			right: 0px;
-			bottom: 0px;
-			left: 0px;
-			opacity: 0.25;
-			z-index: -1; */
-
-			/* background-image: url(img_parallax2.jpg); */
-			/* min-height: 400px; */
-
 			position: relative;
-			/* opacity: 0.65; */
 			background-attachment: fixed;
 			background-position: center;
 			background-repeat: no-repeat;
@@ -49,7 +23,6 @@
 			min-height: 75vh;
 		}
 		#hero h1 {
-			/* margin: 12rem auto; */
 			background-color: rgba(0, 0, 0, 0.85);
 			color: #fff;
 			padding: 18px;
