--- a/legal.html
+++ b/legal.html
@@ -5,28 +5,22 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Legal Stuff</title>
-		<link rel="stylesheet" href="css/foundation.css" />
-		<link rel="stylesheet" href="css/app.css" />
+		<link rel="stylesheet" href="/css/foundation.css" />
+		<link rel="stylesheet" href="/css/app.css" />
 	</head>
 	<body>
 		<header class="grid-x grid-padding-x grid-padding-y align-middle">
 			<div class="large-4 medium-4 small-4 cell">
 				<div>
-					<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
+					<a href="/" rel="home" class="h4"><img src="/media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
 				</div>
 			</div>
 			<div class="large-8 medium-8 small-8 cell">
 				<div>
 					<ul class="dropdown menu align-right" data-dropdown-menu>
-						<li><a href="species.html">Species</a></li>
-						<li>
-							<a href="reports.html">Reports</a>
-							<ul class="menu align-right">
-								<li><a href="possible-approaches.html">Creating a Living Laboratory</a></li>
-								<li><a href="intertidal-zones.html">Intertidal Zones</a></li>
-							</ul>
-						</li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="/species.html">Species</a></li>
+						<li><a href="/reports">Reports</a></li>
+						<li><a href="/contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
@@ -60,7 +54,7 @@
 		<footer class="grid-x grid-padding-x grid-padding-y align-middle" id="contact">
 			<div class="large-4 medium-4 small-4 cell">
 				<div>
-					<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
+					<a href="/" rel="home" class="h4"><img src="/media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
 				</div>
 			</div>
 			<div class="large-8 medium-8 small-8 cell">
@@ -68,7 +62,7 @@
 					<ul class="menu align-right">
 						<ul class="dropdown menu align-right" data-dropdown-menu>
 							<li><a href="species.html">Species</a></li>
-							<li><a href="reports.html">Reports</a></li>
+							<li><a href="/reports">Reports</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<li><a href="legal.html">Legal Stuff</a></li>
 						</ul>
@@ -77,10 +71,10 @@
 			</div>
 		</footer>
 
-		<script src="js/vendor/jquery.js"></script>
-		<script src="js/vendor/what-input.js"></script>
-		<script src="js/vendor/foundation.js"></script>
-		<script src="js/app.js"></script>
+		<script src="/js/vendor/jquery.js"></script>
+		<script src="/js/vendor/what-input.js"></script>
+		<script src="/js/vendor/foundation.js"></script>
+		<script src="/js/app.js"></script>
 
 		<!--https://gtranslate.io/website-translator-widget-->
 		<div class="gtranslate_wrapper"></div>
