--- a/reports/where-to-from-here/index.html
+++ b/reports/where-to-from-here/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Identifying Species</title>
+		<title>Where to From Here? The Future of Species at Risk in the Context of Climate Change at Deadmans Head, New Brunswick</title>
 		<link rel="stylesheet" href="/css/foundation.css" />
 		<link rel="stylesheet" href="/css/app.css" />
 	</head>
@@ -30,18 +30,43 @@
 			<!--  -->
 			<div class="grid-x grid-padding-x">
 				<div class="large-12 cell">
-					<h1>Identifying Species</h1>
+					<h1>Where to From Here? The Future of Species at Risk in the Context of Climate Change at Deadmans Head, New Brunswick</h1>
 				</div>
 			</div>
 			<!--  -->
 			<div class="grid-x grid-padding-x">
 				<div class="large-12 medium-12 small-12 cell">
 					<div>
-						<p>One of our top priorities is to identify and detail current species on and around the designated observation sites. We aim to accomplish this goal using iNaturalist, a social network of naturalists, citizen scientists, and biologists built on the concept of mapping and sharing observations of biodiversity across the globe.</p>
-						<p><a class="button large" href="https://www.inaturalist.org/projects/deadmans-head-forest">Join the Project</a> <a class="button large" href="https://www.inaturalist.org/observations?project_id=deadmans-head-forest&verifiable=any&place_id=any">Explore Species</a></p>
+						<p class="byline">
+							By: Kathryn Downton, Madison Crichton, Laura Lavigne, Amandeep Singh<br />
+							December, 2024
+						</p>
+						<p><a href="where-to-from-here.pdf" class="button large">Read the Full Report (2 MB)</a></p>
+						<h2>Abstract</h2>
+						<p>The project's purpose was to assess the impacts of climate change on species at risk and develop strategies for long-term land management and conservation. The project builds upon two previous phases that established baseline data on forest health and coastal community structures. Research on the possible impacts of climate change and conservation conflicts and options, took into consideration both local and regional climate projections in discussing possible conservation plans.</p>
 					</div>
 				</div>
 			</div>
+
+			<!--  -->
+			<div class="grid-x grid-padding-x">
+				<div class="large-12 cell">
+					<div>
+						<p><img src="species.png" /></p>
+						<p class="text-center">Figure 6. Distribution of species identified through field research by species group.</p>
+					</div>
+				</div>
+			</div>
+			<!--  -->
+			<div class="grid-x grid-padding-x">
+				<div class="large-12 medium-12 small-12 cell">
+					<div>
+						<h2>Conclusion</h2>
+						<p>Based on the findings and in consultation with the property owners, the project team developed three key recommendations for the future management and conservation of Deadmans Head: 1) a "mixed management" zonal approach with selective habitat restoration in Zone 1 and the Zone 2 left largely to nature and future research, 2) partnering with cross-border land trusts for long-term land protection and preservation, and 3) ensuring the inclusion of Indigenous knowledge in future research and assessment. These recommendations account for the preferences of the property owners, the review of species at risk and conservation literature, field and climate change data collected during the project, and the expertise of various land conservation organizations. The proposed approaches aim to balance the goals of scientific research, habitat conservation, and long-term land stewardship.</p>
+					</div>
+				</div>
+			</div>
+
 			<!--  -->
 		</div>
 		<!--  -->
@@ -54,7 +79,7 @@
 			<div class="large-8 medium-8 small-8 cell">
 				<div>
 					<ul class="menu align-right">
-						<ul class="menu align-right">
+						<ul class="dropdown menu align-right" data-dropdown-menu>
 							<li><a href="species.html">Species</a></li>
 							<li><a href="/reports">Reports</a></li>
 							<li><a href="contact.html">Contact</a></li>
