--- a/species-list.html
+++ b/species-list.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>LivingLaboratory.org</title>
-		<link rel="stylesheet" href="css/foundation.css" />
-		<link rel="stylesheet" href="css/app.css" />
+		<link rel="stylesheet" href="/css/foundation.css" />
+		<link rel="stylesheet" href="/css/app.css" />
 	</head>
 	<body>
 		<div class="grid-container">
@@ -14,7 +14,7 @@
 			<header class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-4 medium-4 small-4 cell">
 					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
+						<a href="/" rel="home" class="h4"><img src="/media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
 					</div>
 				</div>
 				<div class="large-8 medium-8 small-8 cell">
@@ -24,8 +24,8 @@
 							<li>
 								<a href="reports.html">Reports</a>
 								<ul class="menu align-right">
-									<li><a href="possible-approaches.html">Creating a Living Laboratory</a></li>
-									<li><a href="intertidal-zones.html">Intertidal Zones</a></li>
+									<li><a href="/reports/possible-approaches/">Creating a Living Laboratory</a></li>
+									<li><a href="/reports/intertidal-zones/">Intertidal Zones</a></li>
 								</ul>
 							</li>
 							<li><a href="contact.html">Contact</a></li>
@@ -248,7 +248,7 @@
 			<footer class="grid-x grid-padding-x grid-padding-y align-middle" id="contact">
 				<div class="large-4 medium-4 small-4 cell">
 					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
+						<a href="/" rel="home" class="h4"><img src="/media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
 					</div>
 				</div>
 				<div class="large-8 medium-8 small-8 cell">
@@ -267,10 +267,10 @@
 			<!--  -->
 		</div>
 
-		<script src="js/vendor/jquery.js"></script>
-		<script src="js/vendor/what-input.js"></script>
-		<script src="js/vendor/foundation.js"></script>
-		<script src="js/app.js"></script>
+		<script src="/js/vendor/jquery.js"></script>
+		<script src="/js/vendor/what-input.js"></script>
+		<script src="/js/vendor/foundation.js"></script>
+		<script src="/js/app.js"></script>
 
 		<!--https://gtranslate.io/website-translator-widget-->
 		<div class="gtranslate_wrapper"></div>
