--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			<div class="grid-x grid-padding-x grid-padding-y gimmie-some-space">
 				<div class="large-12 medium-12 small-12 cell">
 					<div class="video-container">
-						<iframe width="560" height="315" src="https://www.youtube.com/watch?v=kga8RN0aPcc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/kga8RN0aPcc?si=PQGlxQ2XNMCX0_Nb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
