--- a/reports/short-film/index.html
+++ b/reports/short-film/index.html
@@ -43,7 +43,7 @@
 						</p>
 						<p><a href="short-film.pdf" class="button large">Read the Full Report (.2 MB)</a></p>
 						<h2>Abstract</h2>
-						<p>The Bay of Fundy, spanning 1,394 acres between New Brunswick and Nova Scotia, is known for its record tides and rich biodiversity (Delong, 1996). Understanding its current state requires looking at its geological history, which shaped its landscape and established the foundation for its ecosystem. Human activity has also left lasting impacts on the bay's land, water, and wildlife. By examining these historical layers, we can gain insights into its evolution, the role of human influence, and how to protect it for future generations.</p>
+						<p>The Bay of Fundy, New Brunswick and Nova Scotia, is known for its record tides and rich biodiversity (Delong, 1996). Understanding its current state requires looking at its geological history, which shaped its landscape and established the foundation for its ecosystem. Human activity has also left lasting impacts on the bay's land, water, and wildlife. By examining these historical layers, we can gain insights into its evolution, the role of human influence, and how to protect it for future generations.</p>
 					</div>
 				</div>
 			</div>
