--- a/reports/index.html
+++ b/reports/index.html
@@ -7,6 +7,14 @@
 		<title>Reports</title>
 		<link rel="stylesheet" href="/css/foundation.css" />
 		<link rel="stylesheet" href="/css/app.css" />
+		<style>
+			.report {
+				border-top: solid 1px #ddd;
+				margin-top: 1rem;
+				margin-bottom: 1rem;
+				padding: 2rem 0 0rem;
+			}
+		</style>
 	</head>
 	<body>
 		<header class="grid-x grid-padding-x grid-padding-y align-middle">
@@ -32,10 +40,17 @@
 				<div class="large-12 medium-12 small-12 cell">
 					<h2>Reports</h2>
 					<!--  -->
-					<a href="/reports/where-to-from-here/">
-						<div class="card">
-							<div class="card-section">
-								<h3>Where to From Here? The Future of Species at Risk in the Context of Climate Change at Deadmans Head, New Brunswick</h3>
+					<div class="report grid-x grid-padding-x grid-padding-y align-middle">
+						<div class="large-3 medium-4 small-4 cell">
+							<div>
+								<p>
+									<a href="/reports/where-to-from-here/"><img src="/reports/where-to-from-here.jpg" class="rounded" /></a>
+								</p>
+							</div>
+						</div>
+						<div class="large-9 medium-8 small-8 cell">
+							<div>
+								<h3><a href="/reports/where-to-from-here/">Where to From Here? The Future of Species at Risk in the Context of Climate Change at Deadmans Head, New Brunswick</a></h3>
 								<p class="byline">
 									By: Kathryn Downton, Madison Crichton, Laura Lavigne, Amandeep Singh <br />
 									December, 2024
@@ -43,12 +58,19 @@
 								<p>The project's purpose was to assess the impacts of climate change on species at risk and develop strategies for long-term land management and conservation. The project builds upon two previous phases that established baseline data on forest health and coastal community structures.</p>
 							</div>
 						</div>
-					</a>
+					</div>
 					<!--  -->
-					<a href="/reports/saltmarsh/">
-						<div class="card">
-							<div class="card-section">
-								<h3>Determining the presence of Species-At-Risk on the Saltmarsh at Deadman's Cove, New Brunswick</h3>
+					<div class="report grid-x grid-padding-x grid-padding-y align-middle">
+						<div class="large-3 medium-4 small-4 cell">
+							<div>
+								<p>
+									<a href="/reports/saltmarsh/"><img src="/reports/saltmarsh.jpg" class="rounded" /></a>
+								</p>
+							</div>
+						</div>
+						<div class="large-9 medium-8 small-8 cell">
+							<div>
+								<h3><a href="/reports/saltmarsh/">Determining the presence of Species-At-Risk on the Saltmarsh at Deadman's Cove, New Brunswick</a></h3>
 								<p class="byline">
 									By: Malcolm Little, Ahmadu Foluke, Tandis Foadi, Tolulope Timson <br />
 									December, 2024
@@ -56,25 +78,39 @@
 								<p>The project's main goal is to perform an in-depth assessment of SAR within the saltmarsh. The data collected will be compared to already existing historical data and used to predict possible future environmental changes and their effect on species distributions and guide the creation of effective conservation strategies. These findings would facilitate the protection of the shoreline and preserve existing marshes as they are vital to maintaining the health of these ecosystems. The project's primary goal is to enhance interest in marsh conservation and invasion dynamics, deepen understanding of coastal ecosystems, and encourage environmental stewardship for generations to come.</p>
 							</div>
 						</div>
-					</a>
+					</div>
 					<!--  -->
-					<a href="/reports/short-film/">
-						<div class="card">
-							<div class="card-section">
-								<h3>Assessments of Species at Risk on Two Properties in Southwestern New Brunswick and Preparation of a Short Film Highlighting the Biodiversity and Species Development in the Area</h3>
+					<div class="report grid-x grid-padding-x grid-padding-y align-middle">
+						<div class="large-3 medium-4 small-4 cell">
+							<div>
+								<p>
+									<a href="/reports/short-film/"><img src="/reports/short-film.png" class="rounded" /></a>
+								</p>
+							</div>
+						</div>
+						<div class="large-9 medium-8 small-8 cell">
+							<div>
+								<h3><a href="/reports/short-film/">Assessments of Species at Risk on Two Properties in Southwestern New Brunswick and Preparation of a Short Film Highlighting the Biodiversity and Species Development in the Area</a></h3>
 								<p class="byline">
 									By: Lauryn Buyting, Emmanuel Boakye Beresh, Joshua Foster, Vikedukho Pucho<br />
 									December, 2024
 								</p>
-								<p>The Bay of Fundy, spanning 1,394 acres between New Brunswick and Nova Scotia, is known for its record tides and rich biodiversity (Delong, 1996). Understanding its current state requires looking at its geological history, which shaped its landscape and established the foundation for its ecosystem. Human activity has also left lasting impacts on the bay's land, water, and wildlife. By examining these historical layers, we can gain insights into its evolution, the role of human influence, and how to protect it for future generations.</p>
+								<p>The Bay of Fundy, spanning New Brunswick and Nova Scotia, is known for its record tides and rich biodiversity. Understanding its current state requires looking at its geological history, which shaped its landscape and established the foundation for its ecosystem. Human activity has also left lasting impacts on the bay's land, water, and wildlife. By examining these historical layers, we can gain insights into its evolution, the role of human influence, and how to protect it for future generations.</p>
 							</div>
 						</div>
-					</a>
+					</div>
 					<!--  -->
-					<a href="/reports/intertidal-zones/">
-						<div class="card">
-							<div class="card-section">
-								<h3>Intertidal Zones within Deadmans Harbour and the Bay of Fundy</h3>
+					<div class="report grid-x grid-padding-x grid-padding-y align-middle">
+						<div class="large-3 medium-4 small-4 cell">
+							<div>
+								<p>
+									<a href="/reports/intertidal-zones/"><img src="/reports/intertidal-zones.jpg" class="rounded" /></a>
+								</p>
+							</div>
+						</div>
+						<div class="large-9 medium-8 small-8 cell">
+							<div>
+								<h3><a href="/reports/intertidal-zones/">Intertidal Zones within Deadmans Harbour and the Bay of Fundy</a></h3>
 								<p class="byline">
 									By: Allysia Murphy, Sarah Dooley, Allison Meister, Kianna Hughes Clarke, Dhiman Sen <br />
 									December, 2023
@@ -82,21 +118,28 @@
 								<p>In Phase Two of this project we assess the coastal community structure that makes up the intertidal zone on both sides of the peninsula, sites are along Deadmans Harbour and the Bay of Fundy. From the field work and literature review done we present a comprehensive overview and baseline of the species that live within the site or those that could potentially interact with the site and what the possible impacts of climate change could mean for these species.</p>
 							</div>
 						</div>
-					</a>
+					</div>
 					<!--  -->
-					<a href="/reports/possible-approaches/">
-						<div class="card">
-							<div class="card-section">
-								<h3>Creating a Living Laboratory for Deadmans Head Forest During the Age of Climate Change</h3>
+					<div class="report grid-x grid-padding-x grid-padding-y align-middle">
+						<div class="large-3 medium-4 small-4 cell">
+							<div>
+								<p>
+									<a href="/reports/possible-approaches/"><img src="/reports/possible-approaches.png" class="rounded" /></a>
+								</p>
+							</div>
+						</div>
+						<div class="large-9 medium-8 small-8 cell">
+							<div>
+								<h3><a href="/reports/possible-approaches/">Creating a Living Laboratory for Deadmans Head Forest During the Age of Climate Change</a></h3>
 								<p class="byline">
 									By: Abigail Evans, Emilie Noel, Peter Anyah, Rohan Mishra<br />
 									December, 2022
 								</p>
-
 								<p>Baseline data for the forest was collected during several site visits to determine key characteristics of this forest. Furthermore, literature research was conducted to determine predictions for the future of this forest. An NDVI (Normalized Difference Vegetation Index) map was created for the property to determine the overall health of the forest. As well, a LanDSET model was created to determine soil moisture.</p>
 							</div>
 						</div>
-					</a>
+					</div>
+					<!--  -->
 				</div>
 			</div>
 			<!--  -->
